# deep-mimic-pybullet

./: .gitignore  README.md  pyproject.toml
conf/: bob_env.json  pybullet_backflip_env.json  pybullet_crawl_env.json  pybullet_debug_env.json  pybullet_env.json  pybullet_getup_facedown_env.json  pybullet_jog_env.json  pybullet_walk_env.json  pybullet_walk_to_punch_env.json
conf/export/: pybullet_compose_env.json  pybullet_export_backflip_env.json  pybullet_export_cartwheel_env.json  pybullet_export_dance_a_env.json  pybullet_export_getup_facedown_env.json  pybullet_export_jog_env.json  pybullet_export_spin_env.json  pybullet_export_walk_env.json  pybullet_export_walk_to_punch_env.json
data/args/: run_humanoid3d_walk_to_punch_args.txt
envs/: __init__.py
jobs/: deep_mimic.sh  deep_mimic_backflip.sh  deep_mimic_crawl.sh  deep_mimic_getup_facedown.sh  deep_mimic_jog.sh  deep_mimic_walk.sh  deep_mimic_walk_to_punch.sh  sbatch.sh
model/: __init__.py  composite_policy.py  main.py  main_composite_policy.py  main_selection_policy.py  scripts.py  video_exporter.py
model/algorithms/: __init__.py  custom_policy.py  custom_ppo.py
model/callbacks/: record_eval_callback.py  tensorboard_callback.py
model/data/: dataset.py  deep_mimic_bob_adapter.py  deep_mimic_dataset.py  deep_mimic_motion.py  forward_kinematics.py  lerp_dataset.py  loop_dataset.py  vis_fk_data.py
model/envs/: PylocoEnv.py  VanillaEnv.py  video_recoder.py
model/multi_clip/: composite_policy.py  (+3 more)
pybullet_envs/: __init__.py
scripts/: install.sh  patch_wandb_0_15_3_gym_0_21_0.patch  setup.sh
(+24 files in other folders)
